# wake-rs

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  architecture.md
.github/workflows/: build.yml  close-prs.yml
src/: commands.rs  durations.rs  error.rs  interactive.rs  main.rs  session.rs  supervisor.rs  sysutil.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: smoke_linux.sh  smoke_windows.ps1
