[package]
name = "wake-rs"
version = "0.1.0"
edition = "2024"
description = "Keep your machine awake from the CLI (Rust port of wake-cli)"
license = "MIT"

[[bin]]
name = "wake"
path = "src/main.rs"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.45"
sysinfo = "0.39.5"

[target."cfg(unix)".dependencies]
crossterm = "0.29.0"
signal-hook = "0.4.4"

[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
